opodsync/opodsync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opodsync
  namespace: production
  labels:
    app: opodsync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opodsync
  template:
    metadata:
      labels:
        app: opodsync
    spec:
      securityContext:
        runAsUser: $MY_UID
        runAsGroup: $MY_UID
        fsGroup: $MY_UID
      containers:
        - name: opodsync
          image: ganeshlab/opodsync:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: state
              mountPath: /var/www/server/data
              subPath: opodsync
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: opodsync-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: opodsync
  namespace: production
  labels:
    app: opodsync
spec:
  selector:
    app: opodsync
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
