opodsync/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opodsync
  namespace: production
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`opodsync.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: forwardauth-geoblock
          namespace: production
        - name: crowdsec-bouncer
          namespace: production
      services:
        - name: opodsync
          port: 8080
  tls:
    secretName: $SERVICES_TLS_NAME-tls
